--- a/angular.json
+++ b/angular.json
@@ -3,13 +3,9 @@
   "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
-    "demo-ng-hc": {
+    "ng-hc-export-destroy": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -17,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/demo-ng-hc",
+            "outputPath": "dist/ng-hc-export-destroy",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "demo-ng-hc:build"
+            "browserTarget": "ng-hc-export-destroy:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "demo-ng-hc:build:production"
+              "browserTarget": "ng-hc-export-destroy:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "demo-ng-hc:build"
+            "browserTarget": "ng-hc-export-destroy:build"
           }
         },
         "test": {
@@ -114,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "demo-ng-hc:serve"
+            "devServerTarget": "ng-hc-export-destroy:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "demo-ng-hc:serve:production"
+              "devServerTarget": "ng-hc-export-destroy:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "demo-ng-hc"
+  "defaultProject": "ng-hc-export-destroy"
 }
